--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -21,6 +21,9 @@
         <li><a href="{% url 'til:create' %}">Create</a></li>
         <li><a href="{% url 'til:private' %}">Private</a></li>
         <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+        {% if user.is_superuser %}
+        <li><a href="{% url 'admin:index' %}">Admin</a></li>
+        {% endif %}
       {% else %}
         <li><a href="{% url 'auth_login' %}">Login</a></li>
         <li><a href="{% url 'registration_register' %}">Register</a></li>
