--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -21,7 +21,7 @@
         <li><a href="{% url 'til:create' %}">Create</a></li>
         <li><a href="{% url 'til:private' %}">Private</a></li>
         <li><a href="{% url 'auth_logout' %}">Logout</a></li>
-        {% if user.is_superuser %}
+        {% if user.is_staff %}
         <li><a href="{% url 'admin:index' %}">Admin</a></li>
         {% endif %}
       {% else %}
