--- a/til/templates/til/create.html
+++ b/til/templates/til/create.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>Creating new TIL</h1>
   <div class="row">
-    <form action="{% url 'til:create' %}" method="post" class="col s12">
+    <form method="post" class="col s12">
       {% csrf_token %}
       {% for field in form %}
         <div class="row">
