--- a/peak/templates/base.html
+++ b/peak/templates/base.html
@@ -14,15 +14,15 @@
 {% hijack_notification %}
 <nav class="blue darken-3">
   <div class="nav-wrapper container">
-    <a href="{% url 'frontpage' %}" class="brand-logo center">TILs</a>
+    <a href="{% url 'frontpage' %}" class="brand-logo center">Peaks</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="{% url 'frontpage' %}">Index</a></li>
       {% if user.is_authenticated %}
-        <li><a href="{% url 'til:create' %}">Create</a></li>
-        <li><a href="{% url 'til:private' %}">Private</a></li>
+        <li><a href="{% url 'peak:create' %}">Create</a></li>
+        <li><a href="{% url 'peak:private' %}">Private</a></li>
         <li><a href="{% url 'auth_logout' %}">Logout</a></li>
         {% if user.is_staff %}
-        <li><a href="{% url 'admin:index' %}">Admin</a></li>
+          <li><a href="{% url 'admin:index' %}">Admin</a></li>
         {% endif %}
       {% else %}
         <li><a href="{% url 'auth_login' %}">Login</a></li>
