--- a/peak/templates/peak/create.html
+++ b/peak/templates/peak/create.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}Creating a Peak{% endblock %}
+
 {% block content %}
-  <h1>Creating new TIL</h1>
+  <h1>Creating a Peak</h1>
   <div class="row">
     <form method="post" class="col s12">
       {% csrf_token %}
