--- a/peak/templates/base.html
+++ b/peak/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8"/>
   <title>{% block title %}TIL{% endblock %}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-  <link href="{% static 'til/style.css' %}" rel="stylesheet"/>
+  <link href="{% static 'peak/style.css' %}" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="{% static 'hijack/hijack-styles.css' %}" />
   {% block head %}{% endblock %}
 </head>
