--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,7 +8,7 @@
       By {{ post.author.username|capfirst }}
       {% if request.user == post.author %}
         <small class="links">
-          [ <a href="{% url 'blog:edit' post.id %}">edit</a> | <a href="{% url 'post:delete' post.id %}">delete</a> ]
+          [ <a href="{% url 'blog:edit' post.id %}">edit</a> | <a href="{% url 'blog:delete' post.id %}">delete</a> ]
         </small>
       {% endif %}
     </h4>
