--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,7 +5,7 @@
   {% for post in posts %}
     <div class="post">
       <h1><a href="{% url 'blog:detail' post.id %}">{{ post.title }}</a></h1>
-      <h4>By {{ post.author.username|capfirst }}</h4>
+      <h4>By {{ post.author.username|capfirst }} on {{ post.pub_date|date:"M jS" }}</h4>
       <p>{{ post.body|commonmark|truncatewords:30 }}</p>
     </div>
   {% endfor %}
