--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,14 +4,7 @@
 {% block content %}
   <div class="post">
     <h1>{{ post.title }}</h1>
-    <h4>
-      By {{ post.author.username|capfirst }} on {{ post.pub_date|date:"M jS" }}
-      {% if request.user == post.author %}
-        <small class="links">
-          [ <a href="{% url 'blog:edit' post.id %}">edit</a> | <a href="{% url 'blog:delete' post.id %}">delete</a> ]
-        </small>
-      {% endif %}
-    </h4>
+    <h4>By {{ post.author.username|capfirst }} on {{ post.pub_date|date:"M jS" }}</h4>
     <p>{{ post.body|commonmark }}</p>
   </div>
 {% endblock %}
