--- a/peak/templates/base.html
+++ b/peak/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>{% block title %}TIL{% endblock %}</title>
+  <title>{% block title %}Mountain Range{% endblock %}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link href="{% static 'peak/style.css' %}" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="{% static 'hijack/hijack-styles.css' %}" />
@@ -14,7 +14,9 @@
 {% hijack_notification %}
 <nav class="blue darken-3">
   <div class="nav-wrapper container">
-    <a href="{% url 'frontpage' %}" class="brand-logo center">Peaks</a>
+    <a href="{% url 'frontpage' %}" class="brand-logo center">
+      <img src="{% static 'peak/peaks.svg' %}" height="50px" style="margin:5px">
+    </a>
     <ul class="left hide-on-med-and-down">
       <li><a href="{% url 'blog:index' %}">Blog</a></li>
     </ul>
