change color scheme

--- a/peak/templates/base.html
+++ b/peak/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 {% hijack_notification %}
-<nav class="blue darken-3">
+<nav class="teal">
   <div class="nav-wrapper container">
     <a href="{% url 'frontpage' %}" class="brand-logo center">
       <img src="{% static 'peak/peaks.svg' %}" height="50px" style="margin:5px">
