--- a/peak/templates/peak/index.html
+++ b/peak/templates/peak/index.html
@@ -17,7 +17,7 @@
   {% if peaks %}
     <div id="peaks">
       {% for peak in peaks %}
-        <div class="card blue-grey">
+        <div class="card purple lighten-1">
           <a href="{% url 'peak:detail' peak.id %}">
             <div class="card-content white-text">
               <span class="card-title">{{ peak.title }}</span>
